--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
               <li><a href="#">Services</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">FAQs</a></li>
-              <li>
-                <a href="#"
-                  ><img
-                    class="moon-icon"
-                    src="images/moon.png"
-                    id="icon"
-                    alt=""
-                /></a>
-              </li>
+
+              <!--   <a href="#"
+                ><img
+                  class="moon-icon mode"
+                  src="images/moon.png"
+                  id="icon"
+                  alt=""
+              /></a>-->
             </ul>
           </nav>
 
           <ul>
             <li><a class="cta-buttons" href="#">Adopt Now</a></li>
             <li>
-              <a href="#"
-                ><img class="moon" src="images/moon.png" id="icon" alt=""
+              <!--              <a href="#"
+                ><img class="moon mode" src="images/moon.png" id="icon" alt=""
               /></a>
+-->
             </li>
           </ul>
 
@@ -78,7 +78,7 @@
             />
           </svg>
         </header>
-        <img src="images/Paw_Print 2.png" class="paws" alt="" />
+
         <section id="hero">
           <h1>Find Your Furry Friend Adopt a Dog Today!</h1>
           <p>
@@ -88,18 +88,27 @@
           <a class="cta" href="#">Meet Our Dogs</a>
           <img src="images/Paw_Print 1.png" class="paws" alt="" />
           <img class="dots" src="images/dots.png" alt="" />
+          <div class="dogpaws">
+            <img src="images/Paw_Print 2.png" class="dogpaws" alt="" />
+          </div>
           <div class="features">
-            <div class="one">
-              <h5>500</h5>
-              <p>Waiting for home</p>
+            <div class="first">
+              <h2>
+                500 <br />
+                <span> Waiting for home</span>
+              </h2>
             </div>
             <div class="one">
-              <h5>500</h5>
-              <p>Waiting for home</p>
+              <h2>
+                856 <br />
+                <span> Adopted last year</span>
+              </h2>
             </div>
             <div class="one">
-              <h5>500</h5>
-              <p>Waiting for home</p>
+              <h2>
+                410 <br />
+                <span> Rescued</span>
+              </h2>
             </div>
           </div>
           <img
