--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <li><a href="#">Services</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">FAQs</a></li>
+              <li class="adopt-now"><a href="#">Adopt Now</a></li>
 
               <!--   <a href="#"
                 ><img
